[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Prefabs/upgrade/upgrade icon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Prefabs/tooltip/PriceContainer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Menu/autobuy.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/tooltip/Upgrade Tooltip.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Menu/Lock.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.0509804 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=3]
size = 17
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 0.03 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=15]
draw_center = false

[sub_resource type="DynamicFont" id=14]
size = 13
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.152344, 0, 0, 1 )
border_color = Color( 0.341176, 0, 0, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.25 )
draw_center = false

[sub_resource type="DynamicFont" id=17]
size = 13
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Tooltip Level Up" type="MarginContainer"]
margin_right = 245.0
margin_bottom = 94.0
rect_min_size = Vector2( 245, 0 )
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 8 )

[node name="m" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 243.0
margin_bottom = 92.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 231.0
margin_bottom = 80.0
custom_constants/separation = 10

[node name="v" type="VBoxContainer" parent="m/v"]
margin_right = 221.0
margin_bottom = 32.0
custom_constants/separation = 20

[node name="top" type="MarginContainer" parent="m/v/v"]
margin_right = 221.0
margin_bottom = 32.0

[node name="bg" type="Panel" parent="m/v/v/top"]
margin_right = 221.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 8 )

[node name="v" type="VBoxContainer" parent="m/v/v/top"]
margin_right = 221.0
margin_bottom = 32.0

[node name="m" type="MarginContainer" parent="m/v/v/top/v"]
margin_right = 221.0
margin_bottom = 32.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="h" type="HBoxContainer" parent="m/v/v/top/v/m"]
margin_right = 221.0
margin_bottom = 32.0
custom_constants/separation = 8
alignment = 1

[node name="icon" parent="m/v/v/top/v/m/h" instance=ExtResource( 5 )]
unique_name_in_owner = true
size_flags_vertical = 4

[node name="upgradeName" type="Label" parent="m/v/v/top/v/m/h"]
unique_name_in_owner = true
margin_left = 40.0
margin_top = 5.0
margin_right = 221.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "a"
valign = 1
autowrap = true

[node name="sub" type="MarginContainer" parent="m/v/v"]
unique_name_in_owner = true
visible = false
margin_top = 52.0
margin_right = 93.0
margin_bottom = 52.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="bg" type="Panel" parent="m/v/v/sub"]
margin_right = 93.0
custom_styles/panel = SubResource( 10 )

[node name="v" type="VBoxContainer" parent="m/v/v/sub"]
margin_right = 93.0

[node name="refundable" type="MarginContainer" parent="m/v/v/sub/v"]
unique_name_in_owner = true
visible = false
margin_right = 115.0
margin_bottom = 28.0
rect_min_size = Vector2( 66, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="h" type="HBoxContainer" parent="m/v/v/sub/v/refundable"]
margin_left = 5.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 23.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/v/sub/v/refundable/h"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/v/sub/v/refundable/h/icon"]
self_modulate = Color( 1, 0.658824, 0, 1 )
position = Vector2( 9, 9 )
texture = ExtResource( 7 )

[node name="shadow" type="Sprite" parent="m/v/v/sub/v/refundable/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="name" type="Label" parent="m/v/v/sub/v/refundable/h"]
margin_left = 26.0
margin_right = 105.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Pending reset"
align = 1

[node name="cost" parent="m/v/v/sub/v" instance=ExtResource( 6 )]
unique_name_in_owner = true
visible = false
margin_right = 93.0

[node name="bot" type="MarginContainer" parent="m/v"]
margin_top = 42.0
margin_right = 221.0
margin_bottom = 70.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="desc" type="RichTextLabel" parent="m/v/bot"]
unique_name_in_owner = true
margin_top = 10.0
margin_right = 221.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/italics_font = SubResource( 5 )
custom_fonts/bold_font = SubResource( 6 )
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[b][color=#b300ff]Coal[/color][/b] haste x[b]1.1[/b]."
text = "Coal haste x1.1."
fit_content_height = true

[node name="req" type="MarginContainer" parent="m/v"]
unique_name_in_owner = true
visible = false
margin_top = 141.0
margin_right = 221.0
margin_bottom = 240.0
custom_constants/margin_top = 10

[node name="bg" type="Panel" parent="m/v/req"]
margin_top = 10.0
margin_right = 221.0
margin_bottom = 99.0
custom_styles/panel = SubResource( 13 )

[node name="v" type="VBoxContainer" parent="m/v/req"]
margin_top = 10.0
margin_right = 221.0
margin_bottom = 99.0
custom_constants/separation = 8
alignment = 1

[node name="h2" type="HBoxContainer" parent="m/v/req/v"]
margin_right = 221.0
margin_bottom = 24.0

[node name="Panel" type="Panel" parent="m/v/req/v/h2"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 16 )

[node name="icon" type="Sprite" parent="m/v/req/v/h2/Panel"]
position = Vector2( 12, 12 )
texture = ExtResource( 9 )

[node name="shadow" type="Sprite" parent="m/v/req/v/h2/Panel/icon"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 1, 1 )
texture = ExtResource( 9 )

[node name="flair" type="Label" parent="m/v/req/v/h2"]
margin_left = 28.0
margin_top = 3.0
margin_right = 147.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "Requires an Upgrade"
align = 1

[node name="h" type="HBoxContainer" parent="m/v/req/v"]
margin_top = 32.0
margin_right = 221.0
margin_bottom = 89.0
custom_constants/separation = 3
alignment = 1

[node name="reqIcon" parent="m/v/req/v/h" instance=ExtResource( 5 )]
unique_name_in_owner = true
margin_bottom = 57.0

[node name="reqName" type="Label" parent="m/v/req/v/h"]
unique_name_in_owner = true
margin_left = 35.0
margin_right = 221.0
margin_bottom = 57.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "what in cousin-fuckin tarnation alabama betty crocker miss fuckin betty white shit is this"
align = 1
autowrap = true
